kubernetes/clusters/home/4-apps/media/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-01
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:1.43.4 # {"$imagepolicy": "flux-system:plex"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 32400
              name: web
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
              gpu.intel.com/i915: "1"
            limits:
              cpu: "2"
              memory: 4Gi
              gpu.intel.com/i915: "1"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tv
              mountPath: /media/tv
            - name: movies
              mountPath: /media/movies
            - name: dri
              mountPath: /dev/dri
          startupProbe:
            tcpSocket:
              port: 32400
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 32400
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 32400
            periodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: plex-media-tv-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: plex-media-movies-pvc
        - name: dri
          hostPath:
            path: /dev/dri
