kubernetes/clusters/home/4-apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media

spec:
  selector:
    app: plex

  ports:
    - name: web
      port: 32400
      targetPort: 32400

  type: ClusterIP 
---

apiVersion: v1
kind: Service
metadata:
  name: plex-external
  namespace: media

spec:
  selector:
    app: plex

  ports:
    - name: web
      port: 32400
      targetPort: 32400

  type: LoadBalancer
  loadBalancerIP: 192.168.1.115
