kubernetes/clusters/home/4-apps/media/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: media

  annotations:
    external-dns.alpha.kubernetes.io/hostname: plex.alarlab.dev
    external-dns.alpha.kubernetes.io/target: alarlab.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - plex.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: plex.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-external
                port:
                  number: 32400
